<resources>
    <string name="app_name">PracticaFCT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_filtrado_diaMesAnno">Dia/Mes/Año</string>
    <string name="login_Introduce_correo">Introduce tu correo electrónico y se te mandara un correo para reestablecer la contraseña</string>
    <string name="login_correo_electronico">Correo Electrónico</string>
    <string name="login_enviar">Enviar</string>
    <string name="login_tambien_puedes">También puedes</string>
    <string name="login_login">Login</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_recordar_contrasena">Recordar contraseña</string>
    <string name="login_he_olvidado_mis_datos">He olvidado mis datos</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_registrate">Regístrate</string>
    <string name="activity_main_pr_cticas_android">Prácticas Android</string>
    <string name="activity_main_practica_1">Práctica 1</string>
    <string name="activity_main_practica_2">Práctica 2</string>
    <string name="activity_main_navegacion">Navegación</string>
    <string name="login_registrarse">Registrarse</string>
    <string name="Activity_web_views_Desde_una_aplicacion">Desde una aplicación Android, se puede acceder a páginas web, mediante el navegador externo o mediante Webviews</string>
    <string name="Activity_web_views_abrir_navegador">Abrir Navegador externo</string>
    <string name="Activity_web_views_abrir_webview">Abrir Webview</string>
    <string name="dialog_tooltip_estado_solicitud_autoconsumo">Estado solicitud autoconsumo</string>
    <string name="dialog_tooltip_el_tiempo">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, éste variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="dialog_tooltip_aceptar">Aceptar</string>
    <string name="fragment_filtrado_filtrar_facturas">Filtrar Facturas</string>
    <string name="fragment_filtrado_con_fecha">Con fecha de emisión</string>
    <string name="fragment_filtrado_desde">Desde:</string>
    <string name="fragment_filtrado_hasta">Hasta:</string>
    <string name="fragment_filtrado_por_un_importe">Por un importe</string>
    <string name="fragment_filtrado_0">0</string>
    <string name="fragment_filtrado_0_euro">0 €</string>
    <string name="fragment_filtrado_por_estado">Por estado</string>
    <string name="fragment_filtrado_pagadas">Pagadas</string>
    <string name="fragment_filtrado_anuladas">Anuladas</string>
    <string name="fragment_filtrado_cuota_fija">Cuota Fija</string>
    <string name="fragment_filtrado_pendientes_de_pago">Pendientes de pago</string>
    <string name="fragment_filtrado_plan_de_pago">Plan de pago</string>
    <string name="fragment_filtrado_aplicar">Aplicar</string>
    <string name="fragment_filtrado_eliminar_filtros">Eliminar filtros</string>
    <string name="fragment_listado_consumo">Consumo</string>
    <string name="retromock">Retromock</string>
    <string name="fragment_listado_retrofit">Retrofit</string>
    <string name="fragment_listado_facturas">Facturas</string>
    <string name="fragment_smart_solar_cau">CAU (Código Autoconsumo)</string>
    <string name="fragment_smart_solar_estado_solicitud">Estado solicitud alta autoconsumidor</string>
    <string name="fragment_smart_solar_tipo_autoconsumo">Tipo autoconsumo</string>
    <string name="fragment_smart_solar_compensacion_de_excedentes">Compensación de excedentes</string>
    <string name="fragment_smart_solar_potencia_de_instalacion">Potencia de instalación</string>
    <string name="fragment_smart_solar_estamos_trabajando">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu producción solar. Sentimos las molestias.</string>
    <string name="fragment_smart_solar_aqui_tienes">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real</string>
    <string name="fragment_smart_solar_autoconsumo">Autoconsumo:</string>
    <string name="fragment_smart_solar_92">92%</string>
    <string name="item_factura_31_ago_2020">31 Ago 2020</string>
    <string name="item_factura_pendiente_de_pago">Pendiente de pago</string>
    <string name="item_factura_54_56">54,56 €</string>
    <string name="pantalla_smart_solar_smart_solar">Smart Solar</string>
    <string name="pantalla_smart_solar_mi_instalaci_n">Mi instalación</string>
    <string name="pantalla_smart_solar_energ_a">Energía</string>
    <string name="pantalla_smart_solar_detalles">Detalles</string>

</resources>