<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="wrap_content">

<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content"
    android:id="@+id/dialogTitle"
    android:text="@string/dialog_tooltip_estado_solicitud_autoconsumo"
    android:textStyle="bold"
    android:textSize="18sp"
    android:layout_gravity="center"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/dialogMessage"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="20dp"
        android:text="@string/dialog_tooltip_el_tiempo"
        android:textSize="16sp"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/dialogButton"
        android:text="@string/dialog_tooltip_aceptar"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>