<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PantallaSmartSolar">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:id="@+id/matToolbar"
        android:layout_marginTop="16dp"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="Atrás"
        app:titleTextAppearance="@style/SmartSolarToolbarTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextColor="?attr/colorPrimary"
        app:navigationIconTint="?attr/colorPrimary">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matToolbar"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSmartSolar"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/pantalla_smart_solar_smart_solar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:id="@+id/tableLayoutSmart"
            app:layout_constraintTop_toBottomOf="@+id/textViewSmartSolar"
            android:layout_marginStart="20dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_smart_solar_mi_instalaci_n"
                >
            </com.google.android.material.tabs.TabItem>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_smart_solar_energ_a"
                >
            </com.google.android.material.tabs.TabItem>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_smart_solar_detalles"
                >
            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fragContainer"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayoutSmart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        </androidx.fragment.app.FragmentContainerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>